<resources>
    <string name="app_name">St Mary\'s Prayer</string>

    <!-- Action bar -->
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_copyright">Copyright info</string>

    <!-- PREFERENCES -->
    <string name="prefs_scripture">Bible references</string>
    <string name="prefs_scripture_versenumbers_key">include-verse-numbers</string>
    <string name="prefs_scripture_versenumbers_value">Show verse numbers?</string>
    <string name="prefs_scripture_firstversenumbers_key">include-first-verse-numbers</string>
    <string name="prefs_scripture_firstversenumbers_value">Show verse number for first verse in chapter?</string>
    <string name="prefs_scripture_headings_key">include-headings</string>
    <string name="prefs_scripture_headings_value">Show headings?</string>
    <string name="prefs_scripture_footnotes_key">include-footnotes</string>
    <string name="prefs_scripture_footnotes_value">Show footnotes?</string>
    <!-- SERVICE SELECT STRING -->
    <string-array name="sselect_services">
        <item>English Prayer Book</item>
        <item>Common Worship</item>
    </string-array>
    <string name="sselect_epb">English Prayer Book</string>
    <string name="sselect_cw">Common Worship</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Copyright strings -->
    <string name="copyright_esv">
        Scripture quotations are from The ESV Bible® (The Holy Bible, English
        Standard Version®), copyright © 2001 by Crossway, a publishing ministry
        of Good News Publishers. Used by permission. All rights reserved.
    </string>
    <string name="copyright_cw">
        <i>Common Worship: Services and Prayers for the Church of England</i>,
        material from which is included in this app, is copyright © The Archbishops\'
        Council 2000.
    </string>
    <string name="copyright_epb">
        <i>An English Prayer Book</i> is copyright © 1994 by Church Society.
    </string>

    <string name="lords_prayer_heading">The Lord\'s Prayer</string>
    <string name="lords_prayer">
        Our Father in heaven,\n
        hallowed be your name.\n
        Your kingdom come,\n
        your will be done\n
        on earth as in heaven.\n
        Give us today our daily bread.\n
        Forgive us our sins\n
        as we forgive those who sin against us.\n
        And lead us not into temptation\n
        but deliver us from evil;\n
        for the kingdom, the power,\n
        and the glory are yours,\n
        now and forever. Amen.
    </string>
</resources>